No longer can Back to Top be called out on ios

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,7 @@ html
     height: 20px;
     background-color: #F8F8F8;
     box-shadow: 0px 0px 0px 3px #cfcfcf;
+    -webkit-touch-callout: none;
 }
 
 .top-link.show {
